k8s/dev-dev-apps-pb01-khs-atservice-dev/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pdep003--some-cleaner-dev-svc
  labels:
    app: pdep003--some-cleaner-dev
    productgroupid: pdep003
    productid: some-cleaner-dev
    resourcetype: container
    prometheus: prometheus--dks-dev-com02
    type: nginx
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort:80
  selector:
    app: pdep003--some-cleaner-dev
  type: ClusterIP
